Publish the DTrace docs for Ignite (#400)
* Starting new Dtrace topic

* Starting new Dtrace topic

* Adding new DTrace Content

* Adding new DTrace Content

* Adding new DTrace Content

* Adding new DTrace Content

* Adding new DTrace Content

* Fixes for git issues

* Fixes for git issues

* Updates to the TOC

* Adding ETW DTrace Content

* Adding ETW DTrace Content

* Adding new Dtrace content

* Adding new DTrace Dump topic and other updates

* Typo fixes and such

* Typo fixes and such

* Starting updates for sample code changes

* Updates to new code samples

* Updates to code samples for DTrace

* Small fix to lab sample code

* Updates to sample code based on testing

* Updates to sample code based on testing

* Updates to sample code based on testing

* Updates to diagram

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Adding note on performance

* Adding note on bcdedit

* Fixing warning

--- a/windows-driver-docs-pr/devtest/toc.yml
+++ b/windows-driver-docs-pr/devtest/toc.yml
@@ -2541,6 +2541,19 @@
       href: about-event-tracing-for-drivers.md
     - name: "Adding Event Tracing to Kernel-Mode Drivers"
       href: adding-event-tracing-to-kernel-mode-drivers.md
+  - name: "DTrace on Windows"
+# Auto-expanded node
+    items: 
+    - name: "DTrace On Windows"
+      href: dtrace.md
+    - name: "DTrace Programming"
+      href: dtrace-programming.md
+    - name: "DTrace Code Samples"
+      href: dtrace-code-samples.md
+    - name: "DTrace ETW"
+      href: dtrace-etw.md
+    - name: "DTrace Live Dump"
+      href: dtrace-live-dump.md
   - name: "TraceLogging API"
 # Auto-expanded node
     items: 
