--- a/windows-driver-docs-pr/netcx/toc.yml
+++ b/windows-driver-docs-pr/netcx/toc.yml
@@ -2,8 +2,8 @@
   href: index.md
 - name: "What's new in NetAdapterCx"
   items:
-  - name: "Introduction to NetAdapterCx 2.0"
-    href: introduction-to-netadaptercx-2-0.md
+  - name: "NetAdapterCx version overview"
+    href: netadaptercx-version-overview.md
 - name: "Porting NDIS miniport drivers to NetAdapterCx"
   href: porting-ndis-miniport-drivers-to-netadaptercx.md
 - name: "Building a NetAdapterCx client driver"
