add cancel shipping label doc

--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -231,6 +231,8 @@
         href: create-a-new-shipping-label.md
       - name: "Update a shipping label"
         href: update-a-shipping-label.md
+      - name: "Cancel a shipping label"
+        href: cancel-a-shipping-label.md
     - name: "Get audience data"
       href: get-audience-data.md
     - name: "Driver package metadata"
