Add create publisher metadata reference
Add create publisher metadata reference to toc file

--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -237,6 +237,9 @@
       href: get-audience-data.md
     - name: "Driver package metadata"
       href: driver-package-metadata.md
+      items:
+      - name: "Create Publisher Driver Metadata"
+        href: create-publisher-metadata.md
   - name: "File signing LSA plugins and UEFI firmware"
     href: lsa-and-uefi-file-signing.md
   - name: "Dashboard Administration"
