--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -97,8 +97,11 @@
         href: testing-BTP-supported-hardware.md
       - name: "Setting up BTP"
         href: testing-BTP-setup.md
-      - name: "Testing Bluetooth Pairing"
-        href: testing-BTP-tests-pairing.md
-      - name: "Testing Bluetooth HID"
-        href: testing-BTP-tests-hid.md
+      - name: "BTP Tests"
+        href: testing-BTP-Tests.md
+        items:        
+        - name: "Testing Bluetooth Pairing"
+          href: testing-BTP-tests-pairing.md
+        - name: "Testing Bluetooth HID"
+          href: testing-BTP-tests-hid.md
 
