--- a/windows-driver-docs-pr/kernel/toc.yml
+++ b/windows-driver-docs-pr/kernel/toc.yml
@@ -250,7 +250,9 @@
     href: overview-of-windows-memory-space.md
   - name: "Allocating System-Space Memory"
     href: allocating-system-space-memory.md
-  - name: "Map Registers"
+  - name: "POOL_FLAGS"
+    href: pool_flags.md
+- name: "Map Registers"
     href: map-registers.md
   - name: "Mapping Bus-Relative Addresses to Virtual Addresses"
     href: mapping-bus-relative-addresses-to-virtual-addresses.md
