--- a/windows-driver-docs-pr/ifs/toc.yml
+++ b/windows-driver-docs-pr/ifs/toc.yml
@@ -1,97 +1,134 @@
-- name: "File Systems Driver Design Guide"
-  href: index.md
-# Auto-expanded node L1
-  items: 
-  - name: "File System Drivers"
-# Auto-expanded node L2
-    items: 
-    - name: "About File System Drivers"
-      href: about-file-system-drivers.md
-    - name: "Installing a File System Driver"
-      href: installing-a-file-system-driver.md
-  - name: "File System Filter Drivers"
+- name: "File system driver design guide"
 # Auto-expanded node
-    items:
-    - name: "About File System Filter Drivers"
-      href: about-file-system-filter-drivers.md
-    - name: "How File System Filter Drivers Are Similar to Device Drivers"
-      href: how-file-system-filter-drivers-are-similar-to-device-drivers.md
-    - name: "How File System Filter Drivers Are Different from Device Drivers"
-      href: how-file-system-filter-drivers-are-different-from-device-drivers.md 
-  - name: "File System Legacy Filter Drivers"
-  # Auto-expanded node L1
-    items:
-    - name: "About File System Legacy Filter Drivers"
-      href: about-file-system-legacy-filter-drivers.md
-    - name: "File System Driver Concepts for Legacy Filter Drivers"
+  items: 
+  - name: "File system driver design guide"
+    href: index.md
+  - name: "File System Drivers"
+# Auto-expanded node
+    items: 
+    - name: "File System Drivers"
+      href: file-system-drivers.md
+    - name: "Installing a File System Driver"
 # Auto-expanded node
       items: 
+      - name: "Installing a File System Driver"
+        href: installing-a-file-system-driver.md
+      - name: "Creating an INF File for a File System Driver"
+        href: creating-an-inf-file-for-a-file-system-driver.md
+    - name: "Using Extra Create Parameters with an IRP_MJ_CREATE Operation"
+# Auto-expanded node
+      items: 
+      - name: "Using Extra Create Parameters with an IRP_MJ_CREATE Operation"
+        href: using-extra-create-parameters-with-an-irp-mj-create-operation.md
+      - name: "Attaching ECPs to IRP_MJ_CREATE Operations that a Kernel-Mode Driver Originated"
+        href: attaching-ecps-to-irp-mj-create-operations-that-a-kernel-mode-driver-o.md
+      - name: "Using ECPs to Process IRP_MJ_CREATE Operations in a File System Filter Driver"
+        href: using-ecps-to-process-irp-mj-create-operations-in-a-file-system-filter.md
+      - name: "User-Defined ECPs"
+        href: user-defined-ecps.md
+      - name: "System-Defined ECPs"
+        href: system-defined-ecps.md
+  - name: "File System Filter Drivers"
+# Auto-expanded node
+    items: 
+    - name: "File System Filter Drivers"
+      href: file-system-filter-drivers.md
+    - name: "File System Fundamentals"
+# Auto-expanded node
+      items: 
+      - name: "File System Fundamentals"
+        href: file-system-fundamentals.md
       - name: "What Determines When a Driver Is Loaded"
         href: what-determines-when-a-driver-is-loaded.md
       - name: "What Happens to File Systems During System Boot"
         href: what-happens-to-file-systems-during-system-boot.md
       - name: "Storage Device Stacks, Storage Volumes, and File System Stacks"
-        href: storage-device-stacks--storage-volumes--and-file-system-stacks.md
+# Auto-expanded node
+        items: 
+        - name: "Storage Device Stacks, Storage Volumes, and File System Stacks"
+          href: storage-device-stacks--storage-volumes--and-file-system-stacks.md
+        - name: "Storage Device Stacks"
+          href: storage-device-stacks.md
+        - name: "Storage Volumes"
+          href: storage-volumes.md
+        - name: "File System Stacks"
+          href: file-system-stacks.md
       - name: "Mounting a Volume"
 # Auto-expanded node
         items: 
-        - name: "How the Volume is Recognized"
-          href: how-the-volume-is-recognized.md
+        - name: "Mounting a Volume"
+          href: mounting-a-volume.md
         - name: "How the Volume Is Mounted"
           href: how-the-volume-is-mounted.md
         - name: "Volume Mount Example"
           href: volume-mount-example.md
-    - name: "Installing a Legacy Filter Driver"
+    - name: "Introduction to File System Filter Drivers"
 # Auto-expanded node
       items: 
+      - name: "Introduction to File System Filter Drivers"
+        href: introduction-to-file-system-filter-drivers.md
+      - name: "What Is a File System Filter Driver?"
+        href: what-is-a-file-system-filter-driver-.md
+      - name: "File System Filter Drivers Are Not Device Drivers"
+# Auto-expanded node
+        items: 
+        - name: "File System Filter Drivers Are Not Device Drivers"
+          href: file-system-filter-drivers-are-not-device-drivers.md
+        - name: "How File System Filter Drivers Are Similar to Device Drivers"
+          href: how-file-system-filter-drivers-are-similar-to-device-drivers.md
+        - name: "How File System Filter Drivers Are Different from Device Drivers"
+          href: how-file-system-filter-drivers-are-different-from-device-drivers.md
       - name: "Installing a File System Filter Driver"
-        href: installing-a-file-system-filter-driver.md
-      - name: "Creating an INF File for a File System Filter Driver"
-        href: creating-an-inf-file-for-a-file-system-filter-driver.md
-      - name: "Load Order Groups for File System Filter Drivers "
-        href: load-order-groups-for-file-system-filter-drivers.md
-      - name: "File System Filter Driver Classes and Class GUIDs"
-        href: file-system-filter-driver-classes-and-class-guids.md
-      - name: "Using an INF File to Install a File System Filter Driver"
-        href: using-an-inf-file-to-install-a-file-system-filter-driver.md
-      - name: "Using an INF File to Uninstall a File System Filter Driver"
-        href: using-an-inf-file-to-uninstall-a-file-system-filter-driver.md
-    - name: "Initializing a File System Filter Driver"
 # Auto-expanded node
-      items: 
+        items: 
+        - name: "Installing a File System Filter Driver"
+          href: installing-a-file-system-filter-driver.md
+        - name: "Creating an INF File for a File System Filter Driver"
+          href: creating-an-inf-file-for-a-file-system-filter-driver.md
+        - name: "Load Order Groups for File System Filter Drivers "
+          href: load-order-groups-for-file-system-filter-drivers.md
+        - name: "File System Filter Driver Classes and Class GUIDs"
+          href: file-system-filter-driver-classes-and-class-guids.md
+        - name: "Using an INF File to Install a File System Filter Driver"
+          href: using-an-inf-file-to-install-a-file-system-filter-driver.md
+        - name: "Using an INF File to Uninstall a File System Filter Driver"
+          href: using-an-inf-file-to-uninstall-a-file-system-filter-driver.md
       - name: "Initializing a File System Filter Driver"
-        href: initializing-a-file-system-filter-driver.md
-      - name: "Creating the Control Device Object"
-        href: creating-the-control-device-object.md
-      - name: "Registering IRP Dispatch Routines"
-        href: registering-irp-dispatch-routines.md
-      - name: "Registering Fast I/O Dispatch Routines"
-        href: registering-fast-i-o-dispatch-routines.md
-      - name: "Registering FsFilter Callback Routines"
-        href: registering-fsfilter-callback-routines.md
-      - name: "Performing Any Other Needed Initialization"
-        href: performing-any-other-needed-initialization.md
-      - name: "Optional] Registering Callback Routines"
-        href: -optional--registering-callback-routines.md
-      - name: "Optional] Saving a Copy of the Registry Path String"
-        href: -optional--saving-a-copy-of-the-registry-path-string.md
-      - name: "Returning Status"
-        href: returning-status.md
-    - name: "Attaching a Filter to a File System or Volume"
 # Auto-expanded node
-      items: 
+        items: 
+        - name: "Initializing a File System Filter Driver"
+          href: initializing-a-file-system-filter-driver.md
+        - name: "Creating the Control Device Object"
+          href: creating-the-control-device-object.md
+        - name: "Registering IRP Dispatch Routines"
+          href: registering-irp-dispatch-routines.md
+        - name: "Registering Fast I/O Dispatch Routines"
+          href: registering-fast-i-o-dispatch-routines.md
+        - name: "Registering FsFilter Callback Routines"
+          href: registering-fsfilter-callback-routines.md
+        - name: "Performing Any Other Needed Initialization"
+          href: performing-any-other-needed-initialization.md
+        - name: "Optional] Registering Callback Routines"
+          href: -optional--registering-callback-routines.md
+        - name: "Optional] Saving a Copy of the Registry Path String"
+          href: -optional--saving-a-copy-of-the-registry-path-string.md
+        - name: "Returning Status"
+          href: returning-status.md
       - name: "Attaching a Filter to a File System or Volume"
-        href: attaching-a-filter-to-a-file-system-or-volume.md
-      - name: "Creating the Filter Device Object"
-        href: creating-the-filter-device-object.md
-      - name: "Attaching the Filter Device Object to the Target Device Object"
-        href: attaching-the-filter-device-object-to-the-target-device-object.md
-      - name: "Propagating the DO_BUFFERED_IO and DO_DIRECT_IO Flags"
-        href: propagating-the-do-buffered-io-and-do-direct-io-flags.md
-      - name: "Propagating the FILE_DEVICE_SECURE_OPEN Flag"
-        href: propagating-the-file-device-secure-open-flag.md
-      - name: "Clearing the DO_DEVICE_INITIALIZING Flag"
-        href: clearing-the-do-device-initializing-flag.md
+# Auto-expanded node
+        items: 
+        - name: "Attaching a Filter to a File System or Volume"
+          href: attaching-a-filter-to-a-file-system-or-volume.md
+        - name: "Creating the Filter Device Object"
+          href: creating-the-filter-device-object.md
+        - name: "Attaching the Filter Device Object to the Target Device Object"
+          href: attaching-the-filter-device-object-to-the-target-device-object.md
+        - name: "Propagating the DO_BUFFERED_IO and DO_DIRECT_IO Flags"
+          href: propagating-the-do-buffered-io-and-do-direct-io-flags.md
+        - name: "Propagating the FILE_DEVICE_SECURE_OPEN Flag"
+          href: propagating-the-file-device-secure-open-flag.md
+        - name: "Clearing the DO_DEVICE_INITIALIZING Flag"
+          href: clearing-the-do-device-initializing-flag.md
     - name: "Filtering IRPs and Fast I/O"
 # Auto-expanded node
       items: 
@@ -353,19 +390,6 @@
         href: file-system-support-for-contexts.md
       - name: "Best Practices"
         href: best-practices.md
-      - name: "Using Extra Create Parameters with an IRP_MJ_CREATE Operation"
-# Auto-expanded node
-      items: 
-      - name: "Using Extra Create Parameters with an IRP_MJ_CREATE Operation"
-        href: using-extra-create-parameters-with-an-irp-mj-create-operation.md
-      - name: "Attaching ECPs to IRP_MJ_CREATE Operations that a Kernel-Mode Driver Originated"
-        href: attaching-ecps-to-irp-mj-create-operations-that-a-kernel-mode-driver-o.md
-      - name: "Using ECPs to Process IRP_MJ_CREATE Operations in a File System Minifilter"
-        href: using-ecps-to-process-irp-mj-create-operations-in-a-file-system-minifilter.md
-      - name: "User-Defined ECPs"
-        href: user-defined-ecps.md
-      - name: "System-Defined ECPs"
-        href: system-defined-ecps.md
   - name: "Network Redirector Drivers"
 # Auto-expanded node
     items: 
@@ -699,7 +723,7 @@
   - name: "Reference"
 # Auto-expanded node
     items: 
-    - name: "Reference Overview"
+    - name: "Additional Reference"
       href: ifs-reference.md
     - name: "CcIsThereDirtyLoggedPages"
       href: ccistheredirtyloggedpages.md
