Publish new Debugger timeline topic  (#422)
* Starting new Dtrace topic

* Starting new Dtrace topic

* Adding new DTrace Content

* Adding new DTrace Content

* Adding new DTrace Content

* Adding new DTrace Content

* Adding new DTrace Content

* Fixes for git issues

* Fixes for git issues

* Updates to the TOC

* Adding ETW DTrace Content

* Adding ETW DTrace Content

* Adding new Dtrace content

* Adding new DTrace Dump topic and other updates

* Typo fixes and such

* Typo fixes and such

* Starting updates for sample code changes

* Updates to new code samples

* Updates to code samples for DTrace

* Small fix to lab sample code

* Updates to sample code based on testing

* Updates to sample code based on testing

* Updates to sample code based on testing

* Updates to diagram

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Updates based on tech review

* Starting new debugger timeline topic

* Adding new timeline topic content

* Adding new timeline topic content

* Merging in master

* Merging in master

* Merging in master

* Working on debugger timeline topic and other fixes

* Adding new timeline information

* Adding new timeline information

* Updates to timeline topic based on review

* Updates to timeline topic based on review

* Typo fixes

* Minor topic update

* Minor fixes to topics

--- a/windows-driver-docs-pr/debugger/toc.yml
+++ b/windows-driver-docs-pr/debugger/toc.yml
@@ -73,6 +73,8 @@
     href: windbg-what-is-new-preview.md
   - name: "WinDbg Preview - Installation"
     href: windbg-install-preview.md
+  - name: "WinDbg Preview - Timeline"
+    href: windbg-timeline-preview.md
   - name: "WinDbg Preview - Command line startup options"
     href: windbg-command-line-preview.md
   - name: "WinDbg Preview – Settings and workspaces"
