--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -96,9 +96,9 @@
       - name: "Supported BTP Hardware"
         href: testing-BTP-hw.md
         items:
-        - name: "Basic HID Peripheral"
+        - name: "HID Capable Radios"
           href: testing-BTP-hw-hid.md
-        - name: "Basic Audio Peripheral"
+        - name: "Audio Capable Radios"
           href: testing-BTP-hw-audio.md
       - name: "Setting Up BTP"
         href: testing-BTP-setup.md
