--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -102,8 +102,10 @@
             href: myriad-of-machines-that-had-blue-screen-caused-by-crash-in-graphics-driver-binary-discrete-standard.md
           - name: "Myriad of machines with integrated GPU that had a blue screen caused by a crash in the graphics driver binary"
             href: myriad-of-machines-that-had-blue-screen-caused-by-crash-in-graphics-driver-binary-integrated-standard.md
-          - name: "Myriad of machines that had a TDR caused by a crash in the graphics driver binary"
+          - name: "Myriad of machines with discrete GPU that had a TDR caused by a crash in the graphics driver binary"
             href: myriad-of-machines-that-had-tdr-caused-by-crash-in-graphics-driver-binary-standard.md
+          - name: "Myriad of machines with integrated GPU that had a TDR caused by a crash in the graphics driver binary"
+            href: graphics-tdr-integrated-gpu.md
           - name: "Number of machines that had a blue screen caused by a crash in the graphics kernel"
             href: number-of-machines-that-had-blue-screen-caused-by-crash-in-graphics-kernel.md
           - name: "Number of user mode crashes in Microsoft Photos app"
@@ -118,16 +120,16 @@
             href: user-mode-reliability-for-crashes-in-windows-components.md
           - name: "Percent of YouTube video playback failures in Microsoft Edge and Internet Explorer"
             href: percent-of-youtube-video-playback-failures-in-microsoft-edge-and-internet-explorer.md
-          - name: "Myriad of machines with integrated GPU that had a TDR caused by a crash in the graphics driver binary"
-            href: graphics-tdr-integrated-gpu.md
         - name: "Ecosystem audience measures"
           items:
           - name: "Myriad of machines with discrete GPU that had a blue screen caused by a crash in the graphics driver binary" 
             href: myriad-of-machines-that-had-blue-screen-caused-by-crash-in-graphics-driver-binary-discrete-ecosystem.md
           - name: "Myriad of machines with integrated GPU that had a blue screen caused by a crash in the graphics driver binary" 
             href: myriad-of-machines-that-had-blue-screen-caused-by-crash-in-graphics-driver-binary-integrated-ecosystem.md
-          - name: "Myriad of machines that had a TDR caused by a crash in the graphics driver binary" 
+          - name: "Myriad of machines with discrete GPU that had a TDR caused by a crash in the graphics driver binary" 
             href: myriad-of-machines-that-had-tdr-caused-by-crash-in-graphics-driver-binary-ecosystem.md
+          - name: "Myriad of machines with integrated GPU that had a TDR caused by a crash in the graphics driver binary"
+            href: graphics-ecosystem-integrated-gpu.md
           - name: "Number of user mode crashes in Microsoft Edge"
             href: user-mode-crashes-in-microsoft-edge-normalized-by-usage-in-a-year-long-scale.md
           - name: "Number of user mode crashes in top Microsoft apps"
@@ -144,8 +146,6 @@
             href: graphics-display-health-percent-devices-with-display-issues-resume-from-low-power.md
           - name: "Ecosystem Netflix HWDRM Quality Comparison"
             href: ecosystem-netflix-hwdrm-quality-comparison.md
-          - name: "Myriad of machines with integrated GPU that had a TDR caused by a crash in the graphics driver binary"
-            href: graphics-ecosystem-integrated-gpu.md
         - name: "Wi-Fi"
           items:
           - name: "Myriad of machines with discrete GPU that had a blue screen caused by a crash in the graphics driver binary" 
