--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -1,5 +1,5 @@
 - name: "Partner Center for Windows Hardware"
-  href: index.md
+  href: index.yml
 - name: "Hardware Program dashboard FAQ"
   href: hardware-dashboard-faq.md
 - name: "Hardware submissions"
