--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -91,6 +91,8 @@
     - name: "Bluetooth Test Platform (BTP)"
       href: testing-BTP-Overview.md
       items:
+      - name: "Setting Up BTP"
+        href: testing-BTP-setup.md
       - name: "The BTP Software Package"
         href: testing-BTP-software-package.md
       - name: "Supported BTP Hardware"
