--- a/windows-driver-docs-pr/hid/toc.yml
+++ b/windows-driver-docs-pr/hid/toc.yml
@@ -1,4 +1,4 @@
-- name: "HID drivers"
+- name: "Introduction to Human Interface Devices (HID)"
   href: index.md
 - name: "HID Architecture"
   href: hid-architecture.md
@@ -104,8 +104,6 @@
       href: power-management.md
     - name: "Selective suspend for HID over USB devices"
       href: selective-suspend-for-hid-over-usb-devices.md
-    - name: "Resources for HID over USB"
-      href: reference-and-additional-details.md
   - name: "HID over I2C"
     items: 
     - name: "Introduction to HID over I2C"
@@ -120,8 +118,6 @@
       href: troubleshooting-common-errors.md
     - name: "Event tracing"
       href: event-tracing.md
-    - name: "Resources for HID over I2C"
-      href: reference-and-additional-details2.md
 - name: "Non-HID legacy devices and drivers"
   items: 
   - name: "Non-HID legacy devices"
