--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -22,10 +22,10 @@ windows-driver-docs-pr/ifs/ @lorihollasch
 windows-driver-docs-pr/image/ @barrygolden
 windows-driver-docs-pr/install/ @tedhudek
 windows-driver-docs-pr/kernel/ @tedhudek
-windows-driver-docs-pr/mobilebroadband/ @duncanmacmichael
+windows-driver-docs-pr/mobilebroadband/ @billlattimer
 windows-driver-docs-pr/multifunction/ @barrygolden
-windows-driver-docs-pr/netcx/ @duncanmacmichael
-windows-driver-docs-pr/network/ @duncanmacmichael
+windows-driver-docs-pr/netcx/ @billlattimer
+windows-driver-docs-pr/network/ @billlattimer
 windows-driver-docs-pr/nfc/ @EliotSeattle
 windows-driver-docs-pr/parports/ @EliotSeattle
 windows-driver-docs-pr/partnerapps/ @EliotSeattle
@@ -44,7 +44,7 @@ windows-driver-docs-pr/spb/ @EliotSeattle
 windows-driver-docs-pr/storage/ @lorihollasch
 windows-driver-docs-pr/stream/ @barrygolden
 windows-driver-docs-pr/taef/ @EliotSeattle
-windows-driver-docs-pr/usbcon/ @duncanmacmichael
+windows-driver-docs-pr/usbcon/ @billlattimer
 windows-driver-docs-pr/wdf/ @tedhudek
 windows-driver-docs-pr/wdtf/ @EliotSeattle
 windows-driver-docs-pr/whea/ @EliotSeattle
