update driver matching with Win10 info

--- a/windows-driver-docs-pr/install/toc.yml
+++ b/windows-driver-docs-pr/install/toc.yml
@@ -36,7 +36,7 @@
       items: 
       - name: "Overview of the Driver Selection Process"
         href: overview-of-the-driver-selection-process.md
-      - name: "Where Windows Searches for Drivers"
+      - name: "How Windows selects a driver for a device"
         href: where-setup-searches-for-drivers.md
     - name: "How Windows Ranks Drivers"
       items: 
