--- a/windows-driver-docs-pr/index.yml
+++ b/windows-driver-docs-pr/index.yml
@@ -10,7 +10,7 @@ metadata:
    ms.topic: hub-page
    ms.date: 01/14/2020
    ms.localizationpriority: medium
-   uhfHeaderId: "MSDocsHeader-WinDevCenter"
+   uhfHeaderId: "MSDocsHeader-WinHW"
    
 highlightedContent:
   # itemType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | video | whats-new
