--- a/windows-driver-docs-pr/develop/toc.yml
+++ b/windows-driver-docs-pr/develop/toc.yml
@@ -1,25 +1,23 @@
 - name: "Developing Drivers"
   href: index.md
-- name: "Universal Drivers"
+- name: "Windows Drivers"
   items:
-  - name: "Getting Started with Universal Drivers"
-    href: getting-started-with-universal-drivers.md
+  - name: "Getting Started with Windows Drivers"
+    href: getting-started-with-windows-drivers.md
+  - name: "DCH Design Principles and Best Practices"
+    href: dch-principles-best-practices.md
   - name: "Driver Package Isolation"
     href: driver-isolation.md
-  - name: "Building a Universal Windows driver"
-    href: building-a-universal-driver.md
-  - name: "Validating Universal Drivers"
-    href: validating-universal-drivers.md
-  - name: "Building for OneCore"
-    href: building-for-onecore.md
-  - name: "Universal Driver Scenarios"
-    href: universal-driver-scenarios.md
-  - name: "Debugging a Universal driver"
-    href: debugging-a-universal-driver.md
-  - name: "Target platform on driver reference pages"
-    href: windows-10-editions-for-universal-drivers.md
-  - name: "Driver convergence model for Windows 10"
-    href: driver-model-convergence.md
+  - name: "API Layering"
+    href: api-layering.md
+  - name: "Building a Windows driver"
+    href: building-a-windows-driver.md
+  - name: "Validating Windows Drivers"
+    href: validating-windows-drivers.md
+  - name: "DCH-Compliant Driver Package Example"
+    href: dch-example.md
+  - name: "Debugging a Windows Driver"
+    href: debugging-a-windows-driver.md
 - name: "Building Drivers"
   items: 
   - name: "Creating a New Device Function Driver"
@@ -36,6 +34,8 @@
     href: creating-a-driver-from-existing-source-files.md
   - name: "Building a Driver with the WDK"
     href: building-a-driver.md
+  - name: "Building for OneCore"
+    href: building-for-onecore.md
   - name: "Building Drivers for Different Versions of Windows"
     href: building-drivers-for-different-versions-of-windows.md
   - name: "Building ARM64 Drivers with the WDK"
@@ -60,6 +60,10 @@
     href: stampinf-properties-for-driver-projects.md
   - name: "Converting WDK 8.1 Projects to WDK 10"
     href: converting-wdk-8-1-projects-to-wdk-10.md
+  - name: "Driver convergence model for Windows 10"
+    href: driver-model-convergence.md
+  - name: "Target platform on driver reference pages"
+    href: windows-10-editions-for-universal-drivers.md
   - name: "Analyzing a Driver Using Code Analysis and Verification Tools"
     href: analyzing-driver-quality-by-using-code-analysis-tools.md
   - name: "Preparing a Computer for Manual Driver Deployment"
