--- a/windows-driver-docs-pr/stream/toc.yml
+++ b/windows-driver-docs-pr/stream/toc.yml
@@ -2,6 +2,19 @@
   href: index.md
 - name: "Device firmware update for USB devices without using a co-installer"
   href: device-firmware-update-for-usb-devices-without-using-a-co-installer.md
+- name: "Network camera design guide"
+# Auto-expanded node
+  items: 
+  - name: "Network camera design guide"
+    href: network-camera-design-guide.md
+  - name: "KSPROPERTYSETID_NetworkCameraControl"
+    href: kspropertysetid-networkcameracontrol.md
+  - name: "KSPROPERTY_NETWORKCAMERACONTROL_NTP"
+    href: ksproperty_networkcameracontrol_ntp.md
+  - name: "KSPROPERTY_NETWORKCAMERACONTROL_URI"
+    href: ksproperty_networkcameracontrol_uri.md
+  - name: "KSPROPERTY_NETWORKCAMERACONTROL_NTPINFO_HEADER"
+    href: ksproperty_networkcameracontrol_ntpinfo_header.md
 - name: "USB Video Class (UVC) camera implementation guide"
 # Auto-expanded node
   items: 
@@ -2096,10 +2109,5 @@
       href: kseventsetid-vpnotify.md
     - name: "KSEVENT_VPNOTIFY_FORMATCHANGE"
       href: ksevent-vpnotify-formatchange.md
-- name: "KSPROPERTY_NETWORKCAMERACONTROL_NTPINFO_HEADER"
-# Auto-expanded node
-  items: 
-  - name: "KSPROPERTY_NETWORKCAMERACONTROL_NTPINFO_HEADER"
-    href: ksproperty_networkcameracontrol_ntpinfo_header.md 
 - name: "COM Interfaces"
   href: com-interfaces.md
