--- a/windows-driver-docs-pr/toc.yml
+++ b/windows-driver-docs-pr/toc.yml
@@ -1,6 +1,4 @@
-- name: "Getting Started with the Windows Driver Kit"
-  href: index.yml
-- name: "Driver Technologies"
+- name: "What's new"
   items: 
   - name: "What's new in driver development"
     href: what-s-new-in-driver-development.md
