--- a/windows-driver-docs-pr/toc.yml
+++ b/windows-driver-docs-pr/toc.yml
@@ -1,6 +1,6 @@
 - name: "What's new"
   items: 
-  - name: "What's new in driver development"
+  - name: "What's new in  for Windows 10, version 2004"
     href: what-s-new-in-driver-development.md
   - name: "What's new in  for Windows 10, version 1903"
     href: driver-changes-for-windows-10-version-1903.md
