--- a/windows-driver-docs-pr/bringup/toc.yml
+++ b/windows-driver-docs-pr/bringup/toc.yml
@@ -12,7 +12,7 @@
       href: uefi-security.md
     - name: "Unified Extensible Firmware Interface (UEFI)"
       href: unified-extensible-firmware-interface.md
-    - name: "Device Guard and Credential Guard"
+    - name: "Hypervisor-Protected Code Integrity (HVCI)"
       href: device-guard-and-credential-guard.md
     - name: "Fixed ComBuffer and Windows SMM Security Mitigation Table (WSMT)"
       href: fixed-combuffer-and-windows-smm-security-mitigation-table.md
