--- a/windows-driver-docs-pr/driversecurity/toc.yml
+++ b/windows-driver-docs-pr/driversecurity/toc.yml
@@ -6,5 +6,5 @@
   href: threat-modeling-for-drivers.md
 - name: "Windows security model for driver developers"
   href: windows-security-model.md
-- name: "Use the Device Guard Readiness Tool to evaluate HVCI driver compatibility"
+- name: "Evaluate HVCI driver compatibility"
   href: use-device-guard-readiness-tool.md
