--- a/windows-driver-docs-pr/netcx/toc.yml
+++ b/windows-driver-docs-pr/netcx/toc.yml
@@ -52,7 +52,7 @@
       href: "net-ring-element-management.md"
 - name: "NetAdapterCx receive side scaling (RSS)"
   href: netadaptercx-receive-side-scaling-rss-.md
-- name: "Configuring power management"
+- name: "Configuring NetAdapterCx power management"
   href: configuring-power-management.md
 - name: "NDIS-WDF function equivalents"
   href: ndis-wdf-function-equivalents.md
