--- a/windows-driver-docs-pr/index.yml
+++ b/windows-driver-docs-pr/index.yml
@@ -70,7 +70,7 @@ conceptualContent:
         - text: Core kernel API reference
           url: https://docs.microsoft.com/windows-hardware/drivers/ddi/_kernel
           itemType: reference
-    - title: Customize and Manufacture
+    - title: Build devices
       links:
         - text: Customize
           url: https://docs.microsoft.com/windows-hardware/customize
